@@ -556,11 +556,8 @@ DECL|field|similarity
 specifier|private
 name|Similarity
 name|similarity
-init|=
-operator|new
-name|DefaultSimilarity
-argument_list|()
 decl_stmt|;
+comment|// = new DefaultSimilarity();
 comment|/**      * IndexReader to use      */
 DECL|field|ir
 specifier|private
@@ -578,10 +575,63 @@ name|ir
 parameter_list|)
 block|{
 name|this
+argument_list|(
+name|ir
+argument_list|,
+operator|new
+name|DefaultSimilarity
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|MoreLikeThis
+specifier|public
+name|MoreLikeThis
+parameter_list|(
+name|IndexReader
+name|ir
+parameter_list|,
+name|Similarity
+name|sim
+parameter_list|)
+block|{
+name|this
 operator|.
 name|ir
 operator|=
 name|ir
+expr_stmt|;
+name|this
+operator|.
+name|similarity
+operator|=
+name|sim
+expr_stmt|;
+block|}
+DECL|method|getSimilarity
+specifier|public
+name|Similarity
+name|getSimilarity
+parameter_list|()
+block|{
+return|return
+name|similarity
+return|;
+block|}
+DECL|method|setSimilarity
+specifier|public
+name|void
+name|setSimilarity
+parameter_list|(
+name|Similarity
+name|similarity
+parameter_list|)
+block|{
+name|this
+operator|.
+name|similarity
+operator|=
+name|similarity
 expr_stmt|;
 block|}
 comment|/**      * Returns an analyzer that will be used to parse source doc with. The default analyzer      * is the {@link #DEFAULT_ANALYZER}.      *      * @return the analyzer that will be used to parse source doc with. 	 * @see #DEFAULT_ANALYZER      */
